@@ -1,3 +1,7 @@
+24 May 2017: Wouter
+	- authzone cname chain, no rrset duplicates, wildcard doesn't change
+	  rrsets added for cname chain.
+
 23 May 2017: Wouter
 	- first services/authzone check in, it compiles and reads and writes
 	  zonefiles.
